# notes

./: 404.html  CNAME  Dockerfile  LICENSE  README.md  docker-compose.yaml  empty_note.md  empty_notebook.ipynb  index.html  mkdocs.yml  pandas_value_counts.ipynb  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: main.yml
AWS/: EBS.md  EC2.md  EC2_instance_types.md  Kinesis_Streams.md  regions_and_az.md
AWS/EC2_simple_web_server/: index.html
BlockChain/Blockchain_Explained_in_7_Simple_Functions/: index.html
Copilot_Studio/EX_Analyzer/: index.html
Cyber_Security/ARP_Spoofing/: index.html
Cyber_Security/Monitor_cyber_threats_using_EC2/: index.html
Docker/Copy_and_list_files_in_named_volume/: index.html
Docker/Makefile_for_docker-compose/: index.html
Docker/OpenAPI_Editor_and_UI/: index.html
Docker/Setup_GitHub_Container_Registry_Access/: index.html
Finance/Calculate_Composite_Rate_for_Series_I_Bonds/: index.html
Finance/Calculate_Composite_Rate_for_Series_I_Bonds_Latest/: index.html
Finance/Precious_Metals_Spot_Prices_Comparison/: index.html
Git/Add_All_FIles_With_Pattern/: index.html
Google_Sheets/custom_google_sheets_function/: index.html
Linux/Change_Ownership/: index.html
Linux/Check_Group_Membership/: index.html
Linux/Dictionary_Words/: index.html
Linux/List_files_exceeding_size/: index.html
TensorFlow/: MNIST_Hello_World.ipynb  Using_TensorFlow_DataSets.ipynb  XOR_Tensorflow.ipynb
config/: jupyter-config.json
docs/: CNAME  index.md  robots.txt
overrides/: main.html
search/: search_index.json
(+106 files in other folders)
