[tool.poetry]
name = "notes"
version = "0.1.0"
description = ""
authors = ["Shanaka DeSoysa <shanaka@computer.org>"]

[tool.poetry.dependencies]
python = "^3.7.1"

[tool.poetry.dev-dependencies]
mkdocs = "^1.1.2"
mkdocs-material = "^6.2.6"
mknotebooks = "^0.6.2"
Pygments = "^2.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
