[tool.poetry]
name = "notes"
version = "0.1.0"
description = ""
authors = ["Shanaka DeSoysa <shanaka@computer.org>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
mkdocs = "^1.3.0"
mkdocs-material = "^8.2.9"
mknotebooks = "^0.7.0"
Pygments = "^2.11.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
